--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <html>
 
 <head>
-<title>Learning WebGL &mdash; lesson 11</title>
-<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-
-<link href="../lessons.css" type="text/css" rel="stylesheet" media="screen" />
+<title>Billiard</title>
 <script type="text/javascript" src="philo/build/PhiloGL.js"></script>
 <script type="text/javascript" src="slafs.js"></script>
 <script type="text/javascript" src="index.js"></script>
@@ -14,11 +11,8 @@
 
 <body onload="webGLStart();">
   <canvas id="billiard-canvas" style="border: none;" width="1000" height="1000"></canvas>
-  <script src="https://gist.github.com/818017.js"> </script>
   <br/>
 <input type="checkbox" id="lighting" checked /> Use lighting<br/>
-Spin the moon by dragging it with the mouse.
-
 <br/>
 <h2>Directional light:</h2>
 
@@ -46,14 +40,6 @@ Spin the moon by dragging it with the mouse.
 <td>B: <input type="text" id="ambientB" value="0.2" />
 </tr>
 </table>
-
-
-<br/>
-Moon texture courtesy of <a href="http://maps.jpl.nasa.gov/">the Jet Propulsion Laboratory</a>.
-<br/>
-<br/>
-
-  <a href="http://learningwebgl.com/blog/?p=1253">&lt;&lt; Back to Lesson 11</a><br />
 </body>
 
 </html>
