Continued implementation of WebGL

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
 <title>Billiard</title>
 <script type="text/javascript" src="philo/build/PhiloGL.js"></script>
-<script type="text/javascript" src="slafs.js"></script>
+<script type="text/javascript" src="constants.js"></script>
+<script type="text/javascript" src="ball.js"></script>
+<script type="text/javascript" src="Cushion.js"></script>
 <script type="text/javascript" src="index.js"></script>
 
 </head>
 
 
 <body onload="webGLStart();">
-  <canvas id="billiard-canvas" style="border: none;" width="1000" height="1000"></canvas>
+  <canvas id="billiard-canvas" style="border: none;" width="1000" height="600"></canvas>
   <br/>
 <input type="checkbox" id="lighting" checked /> Use lighting<br/>
 <br/>
