Started pocket implementation.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <head>
 <title>Billiard</title>
-<script type="text/javascript" src="philo/build/PhiloGL.js"></script>
-<script type="text/javascript" src="constants.js"></script>
-<script type="text/javascript" src="ball.js"></script>
-<script type="text/javascript" src="Cushion.js"></script>
-<script type="text/javascript" src="index.js"></script>
-
+    <script type="text/javascript" src="philo/build/PhiloGL.js"></script>
+    <script type="text/javascript" src="constants.js"></script>
+    <script type="text/javascript" src="ball.js"></script>
+    <script type="text/javascript" src="Cushion.js"></script>
+    <script type="text/javascript" src="Pocket.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </head>
 
 
