Various updates to improve lighting and make units consistent.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 </head>
 
 
-<body onload="webGLStart();">
-  <canvas id="billiard-canvas" style="border: none;" width="1000" height="600"></canvas>
+<body onload="webGLStart();" style="background-color: #000">
+  <canvas id="billiard-canvas" style="border: none;" width="1100" height="600"></canvas>
   <br/>
+  <!--
 <input type="checkbox" id="lighting" checked /> Use lighting<br/>
 <br/>
 <h2>Directional light:</h2>
@@ -44,7 +45,7 @@
 <td>G: <input type="text" id="ambientG" value="0.2" />
 <td>B: <input type="text" id="ambientB" value="0.2" />
 </tr>
-</table>
+</table>-->
 </body>
 
 </html>
