Corrected frictional force implementation and fixed UI bug.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 slide: function(event, ui) {
                     Globals.strikeForce = ui.value;
                     $("#forceField").html(ui.value);
+                    ui.handle.blur();
                 }
             });
             $("#forceField").html(Globals.strikeForce);
