--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             $( "#slider-vertical").slider({
                 orientation: "vertical",
                 range: "min",
-                min: 20,
-                max: 150,
+                min: 0,
+                max: 50,
                 value: Globals.strikeForce,
                 slide: function(event, ui) {
                     Globals.strikeForce = ui.value;
@@ -66,7 +66,7 @@
       </p>
   </div>
   <div style="clear:both;">
-      <p>Created by:</p>
+      <p>Created by: Louise Carlstr&ouml;m, Emma Hesseborn Fagerholm, Rasmus Landstedt, Jessica Larsson and Emanuel Winblad.</p>
   </div>
 </div>
 </body>
